Add support for categories
